load("@io_bazel_rules_go//go:def.bzl", "nogo")
load("//:def.bzl", "gazelle", "gazelle_binary")

# gazelle:prefix github.com/bazelbuild/bazel-gazelle
# gazelle:exclude vendor
# gazelle:exclude third_party
gazelle(
    name = "gazelle",
    command = "fix",
    # gazelle = ":gazelle_local",
)

gazelle_binary(
    name = "gazelle_local",
    languages = [
        "//language/proto:go_default_library",
        "//language/go:go_default_library",
        "//internal/language/test_filegroup:go_default_library",
    ],
)

nogo(
    name = "nogo",
    vet = True,
    visibility = ["//visibility:public"],
)

exports_files(["WORKSPACE"])
