load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "diff.go",
        "fix.go",
        "flags.go",
        "main.go",
        "print.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/gazelle",
    visibility = ["//visibility:private"],
    deps = [
        "//config:go_default_library",
        "//merger:go_default_library",
        "//packages:go_default_library",
        "//resolve:go_default_library",
        "//rules:go_default_library",
        "//wspace:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
    ],
)

go_binary(
    name = "gazelle",
    importpath = "github.com/bazelbuild/bazel-gazelle/gazelle",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "fix_test.go",
        "integration_test.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/gazelle",
    library = ":go_default_library",
    deps = [
        "//config:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
    ],
)
