load("@io_bazel_rules_go//go/tools/bazel_testing:def.bzl", "go_bazel_test")

# gazelle:exclude go_repository_test.go
go_bazel_test(
    name = "go_repository_test",
    srcs = ["go_repository_test.go"],
    rule_files = [
        "@bazel_gazelle//:all_files",
        "@io_bazel_rules_go//:all_files",
    ],
    deps = ["//testtools"],
)

# TODO(jayconrod): test fetch_repo error cases.

exports_files(
    [
        "gazelle.bash.in",
        "list_repository_tools_srcs.go",
        "repository_rules_test_errors.patch",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "gazelle.bash.in",
        "gazelle_binary.bzl",
        "go_repository.bzl",
        "go_repository_cache.bzl",
        "go_repository_config.bzl",
        "go_repository_tools.bzl",
        "go_repository_tools_srcs.bzl",
        "list_repository_tools_srcs.go",
        "overlay_repository.bzl",
        "repository_rules_test_errors.patch",
        "//internal/gazellebinarytest:all_files",
        "//internal/language:all_files",
        "//internal/version:all_files",
        "//internal/wspace:all_files",
    ],
    visibility = ["//visibility:public"],
)
