load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["label.go"],
    importpath = "github.com/bazelbuild/bazel-gazelle/label",
    visibility = ["//visibility:public"],
    deps = ["//pathtools:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["label_test.go"],
    embed = [":go_default_library"],
)
