load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "fix.go",
        "merger.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/merger",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "fix_test.go",
        "merger_test.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/merger",
    library = ":go_default_library",
    deps = [
        "//config:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
    ],
)
