load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "dep.go",
        "godep.go",
        "modules.go",
        "remote.go",
        "repo.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/repo",
    visibility = ["//visibility:public"],
    deps = [
        "//label:go_default_library",
        "//merger:go_default_library",
        "//pathtools:go_default_library",
        "//rule:go_default_library",
        "//vendor/github.com/pelletier/go-toml:go_default_library",
        "//vendor/golang.org/x/tools/go/vcs:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "import_test.go",
        "remote_test.go",
        "repo_test.go",
        "stubs_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pathtools:go_default_library",
        "//rule:go_default_library",
        "//testtools:go_default_library",
        "//vendor/golang.org/x/tools/go/vcs:go_default_library",
    ],
)
