load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "index.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/resolve",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//flag:go_default_library",
        "//label:go_default_library",
        "//repo:go_default_library",
        "//rule:go_default_library",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "config.go",
        "index.go",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    embed = [":go_default_library"],
    deps = ["//label:go_default_library"],
)
