load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "construct.go",
        "doc.go",
        "generator.go",
        "sort_labels.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/rules",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//packages:go_default_library",
        "//resolve:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@com_github_bazelbuild_buildtools//tables:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    size = "small",
    srcs = ["generator_test.go"],
    data = ["//:testdata"],
    importpath = "github.com/bazelbuild/bazel-gazelle/rules_test",
    deps = [
        ":go_default_library",
        "//config:go_default_library",
        "//merger:go_default_library",
        "//packages:go_default_library",
        "//resolve:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
    ],
)
