load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = [
        "config.go",
        "files.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/testtools",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//language:go_default_library",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "config.go",
        "files.go",
    ],
    visibility = ["//visibility:public"],
)
